--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ build/
 .settings
 .springBeans
 .sts4-cache
+
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
@@ -35,3 +36,6 @@ out/
 
 ### VS Code ###
 .vscode/
+
+# Ignore application.properties file
+**/src/main/resources/application.properties
