--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=ticketbooking
 #config database
 ###
 spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/ticketbooking
 spring.datasource.username=root
 spring.datasource.password=123456
