--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=ticketbooking
 ###
 spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/ticketbooking
+spring.datasource.url=jdbc:mysql://localhost:3306/jobhunter
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
