--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,10 +22,13 @@ ticketbooking.jwt.refresh-token-validity-in-seconds=8640000
 
 #config upload file
 ###
-# #default = 1MB
-# spring.servlet.multipart.max-file-size=50MB
+#default = 1MB
+spring.servlet.multipart.max-file-size=50MB
 
-# #default = 10 MB (form data)
-# spring.servlet.multipart.max-request-size=50MB
+#default = 10 MB (form data)
+spring.servlet.multipart.max-request-size=50MB
 ###
 spring.data.web.pageable.one-indexed-parameters=true
+
+#cloudinary
+cloudinary.url=cloudinary://719485888833556:qvhU_L5xUCU5Pq0iN_lHbw5dN5I@djmcluh5n
