--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,12 @@ spring.data.web.pageable.one-indexed-parameters=true
 
 #cloudinary
 cloudinary.url=cloudinary://719485888833556:qvhU_L5xUCU5Pq0iN_lHbw5dN5I@djmcluh5n
+
+#enable the H2 console
+spring.h2.console.enabled=true
+spring.sql.init.platform=h2
+
+spring.jpa.defer-datasource-initialization=true
+
+# server port
+server.port=8081
