--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,11 @@ spring.jpa.defer-datasource-initialization=true
 
 # server port
 server.port=8081
+
+#mail service
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=cinemacinejoy@gmail.com
+spring.mail.password=ddbsoscgcevplkto
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
