final commit anngo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,22 @@ spring.mail.username=cinemacinejoy@gmail.com
 spring.mail.password=ddbsoscgcevplkto
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#VNPay Configuration
+# Demo credentials cho sandbox testing - Thay bằng credentials thật của bạn
+vnpay.tmnCode=AVCYVKTA
+vnpay.hashSecret=G8K4L5M8ZPXITZNFKC17R8MZXLWN9UN0
+vnpay.url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.returnUrl=http://localhost:8081/api/v1/payments/vnpay/callback
+vnpay.directUrlSuccess=http://localhost:5173/payment-success
+vnpay.directUrlError=http://localhost:5173/payment-error
+vnpay.version=2.1.0
+vnpay.command=pay
+
+#Momo Configuration
+momo.partnerCode=YOUR_PARTNER_CODE
+momo.accessKey=YOUR_ACCESS_KEY
+momo.secretKey=YOUR_SECRET_KEY
+momo.endpoint=https://test-payment.momo.vn/v2/gateway/api/create
+momo.returnUrl=http://localhost:8081/api/v1/payments/momo/callback
+momo.notifyUrl=http://localhost:8081/api/v1/payments/momo/notify
